WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83815
REGRESSION(112745) [CSS Filters] Memory use explosion for offscreen filtered elements
https://bugs.webkit.org/show_bug.cgi?id=83815
Summary
REGRESSION(112745) [CSS Filters] Memory use explosion for offscreen filtered ...
Alexandru Chiculita
Reported
2012-04-12 13:33:01 PDT
In
https://bugs.webkit.org/show_bug.cgi?id=80323
I fixed the drop-shadow and blur repainting issues by using the whole image of the layer and not just the dirty rectangle. That seems to introduce a memory regression on some sites. In this patch I will disable the previous fix until we have a proper fix for
https://bugs.webkit.org/show_bug.cgi?id=81263
.
Attachments
Test case
(502 bytes, text/html)
2012-04-12 14:09 PDT
,
Alexandru Chiculita
no flags
Details
testcase with offscreen elements with grayscale filter
(536 bytes, text/html)
2012-04-12 14:19 PDT
,
James Robinson
no flags
Details
Patch V1
(6.22 KB, patch)
2012-04-12 15:08 PDT
,
Alexandru Chiculita
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexandru Chiculita
Comment 1
2012-04-12 14:09:29 PDT
Created
attachment 136969
[details]
Test case
James Robinson
Comment 2
2012-04-12 14:19:50 PDT
Created
attachment 136971
[details]
testcase with offscreen elements with grayscale filter
Alexandru Chiculita
Comment 3
2012-04-12 15:08:42 PDT
Created
attachment 136981
[details]
Patch V1
James Robinson
Comment 4
2012-04-12 15:27:04 PDT
Comment on
attachment 136981
[details]
Patch V1 View in context:
https://bugs.webkit.org/attachment.cgi?id=136981&action=review
> LayoutTests/css3/filters/offscreen-filters-memory-usage-expected.txt:1 > +This test passes if memory usage is not so hight that it crashes the browser. It should be less than 100MB.
typo: high
WebKit Review Bot
Comment 5
2012-04-12 16:55:44 PDT
Comment on
attachment 136981
[details]
Patch V1 Clearing flags on attachment: 136981 Committed
r114046
: <
http://trac.webkit.org/changeset/114046
>
WebKit Review Bot
Comment 6
2012-04-12 16:55:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug